--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "GPL-3.0",
   "devDependencies": {
-    "browser-sync": "^2.18.8",
+    "browser-sync": "^2.18.12",
+    "foundation-sites": "^6.4.1",
     "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0",
-    "foundation-sites": "^6.3.1"
+    "gulp-sass": "^3.1.0"
   },
   "dependencies": {}
 }
