--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "browser-sync": "^2.18.12",
     "foundation-sites": "^6.4.1",
     "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "node-sass": "^4.5.3"
   },
   "dependencies": {}
 }
